--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,9 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+    environment:
+      - SYNAPSE_SERVER_NAME=localhost
+      - SYNAPSE_REPORT_STATS=no
     volumes:
       - synapse_data:/data
     networks:
