--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
       - UID=1000
       - GID=1000
     volumes:
-      - synapse_data:/data
+      - ./data/synapse:/data
     networks:
       - matrix-network
     ports:
