--- a/config/config.yaml
+++ b/config/config.yaml
@@ -9,8 +9,8 @@ departments:
     color: "#667eea"
     matrix:
       homeserver: "http://localhost:8008"
-      access_token: "syt_c3VwcG9ydA_fjUIoGXNZwDoAgHcecqy_1r4ai8"
-      admin_access_token: "syt_YWRtaW4_cXQIMpjdxWNbDkXOHEaH_2E3eNz"
+      access_token: "syt_c3VwcG9ydA_TAhFIypfvsXmZlLYkoAs_3vBX8q"
+      admin_access_token: "syt_YWRtaW4_vKUNLipNBMtzPdrBVUJG_1KPmzR"
       support_room_id: null  # Creates new rooms per conversation
       bot_user_id: "@support:localhost"
       spaceConfig:
@@ -28,8 +28,8 @@ departments:
     color: "#10b981"
     matrix:
       homeserver: "http://localhost:8008"
-      access_token: "syt_dGVjaF9zdXBwb3J0_VfrFOEFLvJLOmmcFWStV_2lT33r"
-      admin_access_token: "syt_YWRtaW4_cXQIMpjdxWNbDkXOHEaH_2E3eNz"
+      access_token: "syt_dGVjaF9zdXBwb3J0_ekBenGTpZMOlYqpVdIju_1ZK4f9"
+      admin_access_token: "syt_YWRtaW4_vKUNLipNBMtzPdrBVUJG_1KPmzR"
       support_room_id: null
       bot_user_id: "@tech_support:localhost"
       spaceConfig:
@@ -47,8 +47,8 @@ departments:
     color: "#f59e0b"
     matrix:
       homeserver: "http://localhost:8008"
-      access_token: "syt_aWRlbnRpZmljYXRpb24_QQfdbqYeHultXmSVHhtQ_3ihVt5"
-      admin_access_token: "syt_YWRtaW4_cXQIMpjdxWNbDkXOHEaH_2E3eNz"
+      access_token: "syt_aWRlbnRpZmljYXRpb24_oVFFrMqvVuKIOfAtGAel_0rqrNv"
+      admin_access_token: "syt_YWRtaW4_vKUNLipNBMtzPdrBVUJG_1KPmzR"
       support_room_id: null
       bot_user_id: "@identification:localhost"
       spaceConfig:
@@ -66,8 +66,8 @@ departments:
     color: "#8b5cf6"
     matrix:
       homeserver: "http://localhost:8008"
-      access_token: "syt_Y29tbWVyY2U_ozgUoGtggxDFbaBCITUT_3ST49X"
-      admin_access_token: "syt_YWRtaW4_cXQIMpjdxWNbDkXOHEaH_2E3eNz"
+      access_token: "syt_Y29tbWVyY2U_DtuyESgSaIqqxNpaMFGJ_2kNejP"
+      admin_access_token: "syt_YWRtaW4_vKUNLipNBMtzPdrBVUJG_1KPmzR"
       support_room_id: null
       bot_user_id: "@commerce:localhost"
       spaceConfig:
@@ -81,8 +81,8 @@ departments:
 # Legacy Matrix configuration (used as fallback for missing values)
 matrix:
   homeserver: "http://localhost:8008"
-  access_token: "syt_c3VwcG9ydA_KmhAKVzMaoTbQXQUvbNG_0ZZgsr"
-  admin_access_token: "syt_YWRtaW4_BQfxXVPTThskoPUVbrlj_2F4lBY"
+  access_token: "syt_c3VwcG9ydA_TAhFIypfvsXmZlLYkoAs_3vBX8q"
+  admin_access_token: "syt_YWRtaW4_vKUNLipNBMtzPdrBVUJG_1KPmzR"
   support_room_id: null
   bot_user_id: "@support:localhost"
 
@@ -92,13 +92,91 @@ widget:
   subtitle: "We're here to help!"
   brand_color: "#667eea"
   position: "bottom-right"
-  
+
   # Department selection configuration
   department_selection:
     title: "How can we help you today?"
     subtitle: "Choose the team that best matches your needs"
     show_descriptions: true
     layout: "grid"
+
+# Social Media Integration
+social_media:
+  - id: "telegram_support"
+    name: "Telegram Bot"
+    platform: "telegram"
+    icon: "✈️"
+    color: "#0088cc"
+    enabled: true
+    config:
+      bot_username: "QWMatrixTestBot"
+      bot_token: "8497512931:AAGddNooUhvamOws_7ohRTQRgAulQPs9jGM"
+      welcome_message: "Welcome! Please select the department you need help with."
+      auto_reply: true
+      departments:
+        - department_id: "support"
+          command: "/start_support"
+          channel_specific: true
+        - department_id: "tech_support"
+          command: "/start_tech"
+          channel_specific: true
+        - department_id: "identification"
+          command: "/start_id"
+          channel_specific: true
+        - department_id: "commerce"
+          command: "/start_commerce"
+          channel_specific: true
+      working_hours:
+        enabled: true
+        timezone: "UTC"
+        schedule:
+          - day: "monday"
+            start: "09:00"
+            end: "17:00"
+            enabled: true
+          - day: "tuesday"
+            start: "09:00"
+            end: "17:00"
+            enabled: true
+          - day: "wednesday"
+            start: "09:00"
+            end: "17:00"
+            enabled: true
+          - day: "thursday"
+            start: "09:00"
+            end: "17:00"
+            enabled: true
+          - day: "friday"
+            start: "09:00"
+            end: "17:00"
+            enabled: true
+          - day: "saturday"
+            start: "10:00"
+            end: "15:00"
+            enabled: false
+          - day: "sunday"
+            start: "10:00"
+            end: "15:00"
+            enabled: false
+        off_hours_message: "Thank you for your message! Our team is currently offline. We'll respond during business hours (9 AM - 5 PM UTC, Monday-Friday)."
+
+# Communication Channels Configuration
+communication_channels:
+  - type: "web"
+    id: "web_chat"
+    name: "Web Chat"
+    description: "Chat directly with our support team"
+    icon: "💬"
+    color: "#667eea"
+    available: true
+  - type: "social"
+    id: "telegram_channel"
+    name: "Telegram"
+    description: "Continue the conversation on Telegram"
+    icon: "✈️"
+    color: "#0088cc"
+    available: true
+    social_media_id: "telegram_support"
 
 # Server configuration
 server:
