--- a/package.json
+++ b/package.json
@@ -1,10 +1,27 @@
 {
+  "scripts": {
+    "build:widget": "vite build",
+    "serve": "node server/index.js",
+    "start": "node server/index.js",
+    "dev": "vite",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "axios": "^1.12.2",
     "cors": "^2.8.5",
     "eventsource": "^4.0.0",
     "express": "^5.1.0",
     "js-yaml": "^4.1.0",
+    "matrix-js-sdk": "^38.3.0",
     "node-telegram-bot-api": "^0.66.0"
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.15",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.4",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.7"
   }
 }
