--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   postgres:
     image: postgres:15
+    container_name: postgres
     restart: unless-stopped
     environment:
       POSTGRES_USER: synapse_user
@@ -16,6 +17,7 @@ services:
 
   synapse:
     image: matrixdotorg/synapse:v1.113.0
+    container_name: matrix-synapse
     restart: unless-stopped
     environment:
       SYNAPSE_SERVER_NAME: localhost
