--- a/docker/synapse/homeserver.yaml
+++ b/docker/synapse/homeserver.yaml
@@ -26,7 +26,7 @@ listeners:
 database:
   name: psycopg2
   args:
-    user: synapse
+    user: synapse_user
     password: synapse_password
     database: synapse
     host: postgres
