--- a/docker/synapse/homeserver.yaml
+++ b/docker/synapse/homeserver.yaml
@@ -16,7 +16,7 @@ listeners:
     tls: false
     type: http
     x_forwarded: true
-    bind_addresses: ['::1', '127.0.0.1', '0.0.0.0']
+    bind_addresses: ['0.0.0.0']
 
     resources:
       - names: [client, federation]
